@@ -39,7 +39,7 @@ public class LifeCycleModule implements Module
 {
     private final List<Object> injectedInstances = Lists.newArrayList();
     private final LifeCycleMethodsMap lifeCycleMethodsMap = new LifeCycleMethodsMap();
-    private final AtomicReference<LifeCycleManager> lifeCycleManagerRef = new AtomicReference<LifeCycleManager>(null);
+    private final AtomicReference<LifeCycleManager> lifeCycleManagerRef = new AtomicReference<>(null);
 
     @Override
     public void configure(Binder binder)
@@ -89,6 +89,6 @@ public class LifeCycleModule implements Module
     private boolean isLifeCycleClass(Class<?> clazz)
     {
         LifeCycleMethods methods = lifeCycleMethodsMap.get(clazz);
-        return methods.hasFor(PostConstruct.class) || methods.hasFor(PreDestroy.class);
+        return methods.hasFor(PostConstruct.class) || methods.hasFor(AcceptRequests.class) || methods.hasFor(PreDestroy.class);
     }
 }
